# vscfreedev

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  DAEMON_IMPLEMENTATION.md  DEVELOPMENT.md  README.md  hk.pkl
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: daemon_integration.rs
crates/client/: Cargo.toml  TESTING.md  build.rs
crates/client/src/: client.rs  constants.rs  daemon_client.rs  daemon_protocol.rs  lib.rs  simple_client.rs  simple_client_transport.rs  transport_factory.rs
crates/client/src/daemon/: handler.rs  mod.rs  server.rs
crates/client/src/transport/: local.rs  mod.rs  shared.rs  ssh.rs  tcp.rs  unix.rs  windows.rs  wsl.rs
crates/client/tests/: basic_communication_test.rs  binary_transfer_test.rs  cli_test.rs  client_basic_test.rs  client_test.rs  comprehensive_functionality_test.rs  direct_port_forward_test.rs  local_transport_test.rs  port_forward_start_test.rs  port_forward_test.rs  protocol_test.rs  simple_binary_upload_test.rs  simple_protocol_test.rs  simple_test.rs
crates/client/tests/docker/: binary_transfer.rs  mod.rs  port_forwarding.rs  ssh_communication.rs
crates/client/tests/shared/: docker.rs  mod.rs  test_utils.rs
crates/client/tests/unit/: comprehensive_local.rs  local_communication.rs  local_transport.rs  mod.rs  protocol_serialization.rs
crates/core/: Cargo.toml
crates/core/src/: browser.rs  clipboard.rs  config.rs  error.rs  error_legacy.rs  lib.rs  logging.rs  message_channel.rs  metrics.rs  port_forward.rs  protocol.rs  protocol_legacy.rs  session_legacy.rs  transport.rs  transport_legacy.rs
crates/core/src/error/: categories.rs  context.rs  mod.rs  retry.rs
crates/core/src/protocol/: buffer.rs  codec.rs  daemon.rs  implementation.rs  mod.rs  request_response.rs  simple.rs
crates/core/src/session/: lifecycle.rs  manager.rs  metrics.rs  mod.rs  pool.rs  registry.rs
crates/core/src/tests/: transport_tests.rs
crates/core/src/transport/: builder.rs  factory.rs  mod.rs  types.rs
crates/e2e/: Cargo.toml  README.md
crates/e2e/src/: docker.rs  lib.rs
crates/e2e/tests/: cli_test.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/remote/: Cargo.toml
crates/remote/src/: ipc.rs  lib.rs  main.rs
crates/remote/tests/: ipc_integration_test.rs
examples/: daemon_demo.sh  gui_daemon_usage.rs
scripts/: test-all.sh  test-fast.sh
