[workspace]
members = ["crates/core", "crates/client", "crates/remote", "crates/cli", "crates/gui", "crates/e2e"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.0.1"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
vscfreedev-core = { path = "crates/core" }
vscfreedev-remote = { path = "crates/remote" }
vscfreedev-client = { path = "crates/client" }