[workspace]
members = ["crates/core", "crates/client", "crates/remote", "crates/cli", "crates/gui"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atty303/vscfreedev"
authors = ["atty303"]
description = "VSCode-like development environment with remote server support"

[workspace.dependencies]
# Internal crates
vscfreedev-core = { path = "crates/core" }
vscfreedev-remote = { path = "crates/remote" }
vscfreedev-client = { path = "crates/client" }

# External dependencies
anyhow = "1"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
russh = "0.52"
russh-keys = "0.49"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
thiserror = "2"
tokio = { version = "1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }