[package]
name = "vscfreedev-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
description = "Client library for connecting to remote vscfreedev servers"

[dependencies]
vscfreedev-core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "process"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
