[package]
name = "yuha-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
description = "Client library for connecting to remote yuha servers"

[dependencies]
yuha-core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "process"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = "0.22"
socket2 = "0.5"

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
