[package]
name = "yuha-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
description = "Core functionality for yuha"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
url = "2.5"
toml = "0.8"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
fastrand = "2.0"

[dev-dependencies]
tempfile = { workspace = true }
