[package]
name = "yuha-gui"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
description = "Graphical user interface for yuha"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
