[package]
name = "vscfreedev-remote"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "vscfreedev-remote"
path = "src/main.rs"

[dependencies]
vscfreedev-core = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "io-std"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
bytes = "1"
