[package]
name = "vscfreedev-remote"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
description = "Remote server component for vscfreedev"

[[bin]]
name = "vscfreedev-remote"
path = "src/main.rs"

[dependencies]
vscfreedev-core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "io-std"] }
anyhow = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
